workload/gangway/manifests/gangway.yaml
#@ load("@ytt:data", "data")

---
apiVersion: v1
kind: Namespace
metadata:
  name: management
---
kind: Service
apiVersion: v1
metadata:
  name: gangway
  namespace: management
  labels:
    app.kubernetes.io/name: gangway
    app.kubernetes.io/instance: gangway
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: gangway
    app.kubernetes.io/instance: gangway
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: gangway
  namespace: management
spec:
  virtualhost:
    fqdn: #@ "sso.management.{}".format(data.values.domain)
    tls:
      secretName: #@ "management/management.{}".format(data.values.domain)
  routes:
    - services:
        - name: gangway
          port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gangway
  namespace: management
  labels:
    app.kubernetes.io/name: gangway
    app.kubernetes.io/instance: gangway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gangway
      app.kubernetes.io/instance: gangway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gangway
        app.kubernetes.io/instance: gangway
        revision: "1"
    spec:
      containers:
        - name: gangway
          image: registry.tkg.vmware.run/gangway:v3.2.0_vmware.1
          imagePullPolicy: IfNotPresent
          command: ["gangway", "-config", "/gangway/gangway.yaml"]
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
          volumeMounts:
            - name: gangway
              mountPath: /gangway/
          livenessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 60
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
      volumes:
        - name: gangway
          configMap:
            name: gangway
